--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 }
 
     </style>
-    <title>This is the title of the webpage!</title>
+    <title>Builder testing</title>
   </head>
   <body class="ubuntu-regular">
     <table style="text-align: left;">
