--- a/index.html
+++ b/index.html
@@ -112,5 +112,13 @@
 <br>
   <label style="text-align: left;">investment points remaining: <div id="invcount"></div></label>
   <script src="order.js"></script>
+  <br>
+  <button onclick="order()" id="orderb">order</button>
+  <br>
+  <label>total order points: <div id='ordert'></div></label>
+  <br>
+  <label>average order points: <div id='ordera'></div></label>
+  <br>
+  <label>lost order points: <div id='orderl'></div></label>
 </body>
 </html>
