--- a/index.html
+++ b/index.html
@@ -114,11 +114,10 @@
   <script src="order.js"></script>
   <br>
   <button onclick="order()" id="orderb">order</button>
+  <label>total order points: <div id='orderft'></div></label>
   <br>
-  <label>total order points: <div id='ordert'></div></label>
+  <label>average order points: <div id='orderfa'></div></label>
   <br>
-  <label>average order points: <div id='ordera'></div></label>
-  <br>
-  <label>lost order points: <div id='orderl'></div></label>
+  <label>space points: <div id='orderfl'></div></label>
 </body>
 </html>
