--- a/index.html
+++ b/index.html
@@ -118,6 +118,6 @@
   <br>
   <label>average order points: <div id='orderfa'></div></label>
   <br>
-  <label>space points: <div id='orderfl'></div></label>
+  <label>spare points: <div id='orderfl'></div></label>
 </body>
 </html>
