--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
       th {
        padding-right: 100px;
       }
+      .pre {
+        color: gray;
+        font-size: small;
+      }
+      .textspacesmall {
+        display: inline-block;
+        padding-left: 5px;
+      }
       .textspace {
         display: inline-block;
         padding-left: 10px;
@@ -81,45 +89,45 @@
   </head>
   <body class="ubuntu-regular">
     <!--main structure-->
-    <table style="text-align: left;">
+    <table style="text-align: right;">
       <tr>
-        <th>str:<div class="textspace"></div><input placeholder="0" maxlength="3" id="strinput"></th>
-        <th>flame:<div class="textspace"></div><input placeholder="0" maxlength="3" id="flminput"></th>
+        <th>str:<div class="textspace"></div><span id="pre0" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="strinput"></th>
+        <th>flame:<div class="textspace"></div><span id="pre9" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="flminput"></th>
       </tr>
       <tr>
-        <th>fort:<div class="textspace"></div><input placeholder="0" maxlength="3" id="fortinput"></th>
-        <th>frost:<div class="textspace"></div><input placeholder="0" maxlength="3" id="iceinput"></th>
+        <th>fort:<div class="textspace"></div><span id="pre1" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="fortinput"></th>
+        <th>frost:<div class="textspace"></div><span id="pre10" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="iceinput"></th>
       </tr>
       <tr>
-        <th>agil:<div class="textspace"></div><input placeholder="0" maxlength="3" id="agilinput"></th>
-        <th>lightning:<div class="textspace"></div><input placeholder="0" maxlength="3" id="ltninput"></th>
+        <th>agil:<div class="textspace"></div><span id="pre2" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="agilinput"></th>
+        <th>lightning:<div class="textspace"></div><span id="pre11" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="ltninput"></th>
       </tr>
       <tr>
-        <th>int:<div class="textspace"></div><input placeholder="0" maxlength="3" id="intinput"></th>
-        <th>gale:<div class="textspace"></div><input placeholder="0" maxlength="3" id="galeinput"></th>
+        <th>int:<div class="textspace"></div><span id="pre3" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="intinput"></th>
+        <th>gale:<div class="textspace"></div><span id="pre12" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="galeinput"></th>
       </tr>
       <tr>
-        <th>will:<div class="textspace"></div><input placeholder="0" maxlength="3" id="willinput"></th>
-        <th>shadow:<div class="textspace"></div><input placeholder="0" maxlength="3" id="shdwinput"></th>
+        <th>will:<div class="textspace"></div><span id="pre4" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="willinput"></th>
+        <th>shadow:<div class="textspace"></div><span id="pre13" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="shdwinput"></th>
       </tr>
       <tr>
-        <th>char:<div class="textspace"></div><input placeholder="0" maxlength="3" id="charinput"></th>
-        <th>blood:<div class="textspace"></div><input placeholder="0" maxlength="3" id="bldinput"></th>
+        <th>char:<div class="textspace"></div><span id="pre5" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="charinput"></th>
+        <th>blood:<div class="textspace"></div><span id="pre14" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="bldinput"></th>
       </tr>
       <tr>
         <th></th>
-        <th>iron:<div class="textspace"></div><input placeholder="0" maxlength="3" id="mtlinput"></th>
+        <th>iron:<div class="textspace"></div><span id="pre15" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="mtlinput"></th>
       </tr>
     </table>
-    <table style="text-align: left;">
+    <table style="text-align: right;">
       <tr>
-        <th>heavy:<div class="textspace"></div><input placeholder="0" maxlength="3" id="hwinput"></th>
+        <th>hvy:<div class="textspace"></div><span id="pre6" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="hwinput"></th>
       </tr>
       <tr>
-        <th>medium:<div class="textspace"></div><input placeholder="0" maxlength="3" id="mwinput"></th>
+        <th>med:<div class="textspace"></div><span id="pre7" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="mwinput"></th>
       </tr>
       <tr>
-        <th>light:<div class="textspace"></div><input placeholder="0" maxlength="3" id="lwinput"></th>
+        <th>light:<div class="textspace"></div><span id="pre8" class="ubuntu-medium pre">0</span><div class="textspacesmall"></div><input placeholder="0" maxlength="3" id="lwinput"></th>
       </tr>
     </table>
 <br>
