--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <br>
   <button onclick="loadpre()">load preshrine</button><div class="textspacexl"></div><button onclick="exportshrine()">export preshrine</button><br>
   <br>
-  <button onclick="savepost()">save postshrine</button><br>
+  <button onclick="savepost()">save postshrine</button><div class="textspacexl"></div><button id="savesetting" onclick="savesetting()"></button><br>
   <br>
   <button onclick="loadpost()">load postshrine</button>
 <!--uh idk-->
