--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
   <button onclick="savepost()">save postshrine</button><div class="textspacexl"></div><button id="savesetting" onclick="savesetting()"></button><br>
   <br>
   <button onclick="loadpost()">load postshrine</button>
+
+  <button onclick="agility()">agility button</button>
 </div>
 <!--uh idk-->
 <br>
