very important lol

--- a/index.html
+++ b/index.html
@@ -4,133 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <style>
-      body {
-        background-color: #DCDCD8;
-        font-size: 2vh;
-      }
-      input {
-        width: 3.75vh;
-        font-size: 2vh;
-        display: inline-block;
-        background-color: #CCCCC7;
-        border: 0;
-        outline: 0;      
-      }
-      input:hover {
-        background-color: #C7C7CC; 
-      }
-      th {
-        font-size: 2vh;
-        text-align: right;
-        margin-left: 0.5vh;
-      }
-      .show {
-        display: block;
-      }
-      .hide {
-        display: none;
-      }
-      th {
-       padding-right: 100px;
-      }
-      .pre {
-        color: #AFAFA6;
-        font-size: 1.6vh;
-        margin-left: 2vh;
-      }
-      .textspacesmall {
-        display: inline-block;
-        padding-left: 0.5vh;
-      }
-      .textspace {
-        display: inline-block;
-        padding-left: 2vh;
-      }
-      .textspacelarge {
-        display: inline-block;
-        padding-left: 5vh;
-      }
-      .textspacexl {
-        display: inline-block;
-        padding-left: 10vh;
-      }
-      .textspacexxl {
-        display: inline-block;
-        padding-left: 20vh;
-      }
-      .talentbox {
-        margin-top: 2%;
-        margin-left: 12%;
-        height: 80%; 
-        width: 30%;
-        border: 3px solid #ccc;
-        overflow: auto;
-        display: inline-block;
-      }
-      button {
-        font-size: 2vh;
-        display: inline-block;
-        background-color: #CCCCC7;
-        border: 0;
-        outline: 0; 
-        font-family: "Ubuntu", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-      }
-      button:hover {
-        background-color: #E2E2DF;
-        color: #38383D;
-      }
-.ubuntu-light {
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.ubuntu-regular {
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.ubuntu-regular {
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.ubuntu-bold {
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.ubuntu-light-italic {
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 300;
-  font-style: italic;
-}
-
-.ubuntu-regular-italic {
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 400;
-  font-style: italic;
-}
-
-.ubuntu-regular-italic {
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 500;
-  font-style: italic;
-}
-
-.ubuntu-bold-italic {
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 700;
-  font-style: italic;
-}
-
-    </style>
+    <link href="style.css" rel="stylesheet">
     <title>Builder testing</title>
   </head>
   <body class="ubuntu-regular">
