--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <br>
   <button onclick="loadpost()">load postshrine</button>
 
-  <button onclick="agility()">agility button</button>
+  <button onclick="checktalents()">check talents button</button>
 </div>
 <!--uh idk-->
 <br>
@@ -84,7 +84,6 @@
 <!--below here is the script stuff-->
   <script src="cosmetics.js"></script>
   <script src="order.js"></script>
-  <script src="talents.js"></script>
   <script>load();</script>
 </body>
 </html>
