added button to toggle misc talents

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <br>
   <button onclick="loadpost()">load postshrine</button>
 
-  <button onclick="checktalents()">check talents button</button>
+  <button onclick="testtalents()">test button</button>
 </div>
 <!--uh idk-->
 <br>
@@ -80,6 +80,8 @@
   <div id="talents" class="hide tab">
     <div id="talentbox1" class="talentbox"></div>
     <div id="talentbox2" class="talentbox"></div>
+    <br>
+    <button id="talentsetting1" onclick="hidenonmains()">hi</button>
   </div>
 <!--below here is the script stuff-->
   <script src="cosmetics.js"></script>
