changed button text

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
   <br>
   <label>spare points: <div id='orderfl'></div></label>
   <br>
-  <button onclick="savepre()">save preshrine</button><div class="textspacexl"></div><button onclick="importshrine()">import preshrine</button><br>
+  <button onclick="savepre()">save preshrine</button><div class="textspacexl"></div><button onclick="importshrine()">import build</button><br>
   <br>
-  <button onclick="loadpre()">load preshrine</button><div class="textspacexl"></div><button onclick="exportshrine()">export preshrine</button><br>
+  <button onclick="loadpre()">load preshrine</button><div class="textspacexl"></div><button onclick="exportshrine()">export build</button><br>
   <br>
   <button onclick="savepost()">save postshrine</button><div class="textspacexl"></div><button id="savesetting" onclick="savesetting()"></button><br>
   <br>
